[package]
name = "grrs"
version = "0.1.0"
authors = ["Felix"]
edition = "2021"
description = "A simple tool to search files"
readme = "README.md"
keywords = ["cli", "search"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.14", features = ["derive"] }
anyhow = "1.0.71"
indicatif = "0.17.3"
log = "0.4.17"
env_logger = "0.10.0"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
tempfile = "3.5.0"
